Dao support for searching for FHIR ids, and full resources. (#5612)
Move several search transformations inside the resource dao.

Create search for FHIR Ids, and search for Resources entry points.